archive/claim-cards/v279/searles_lake.md
# CLAIM CARD — searles_lake  (v279, seed 42, 300 steps)

**Anchor:** Searles Lake, San Bernardino County, California — Pleistocene-Holocene closed-basin alkaline-saline brine, the textbook locality for sodium-borate / sodium-sulfate / sodium-chloride evaporites. ~70 evaporite mineral species documented (Smith 1979 USGS PP 1043). Type locality for hanksite, sulfohalite, borax (commercially), tincalconite.
**Deposit:** Mojave desert closed basin with Sierra Nevada snowmelt feed. Wet/dry seasonal cycling drives the full evaporite cascade: halite crusts in the drying windows, borax + mirabilite in cold winter, thenardite paramorphs in summer heat, and tincalconite where hot saline brine or exposed dry air dehydrates surviving borax. The 20-mule team era of American borate commerce ran on chemistry like this.
**Initial:** 18 °C, 0.05 kbar, wall=basin
**Model digest:** Pfluid:kbar-0.001..4.4|Ksp-pressure:SUPCRTBL-delta-logK-reaction-grid+density-mask+continuous-temperature-edge-hold+no-pressure-extrapolation-v2|sulfate-Ksp:USGS-PHREEQC-wateq4f-analytic5+explicit-temperature-envelope-v1|carbonate-rate:PWP-omega2over3-raw+production-positive-affinity-series-resistance-Aover1plusA+molarMgCa+pKwTP-hydroxycarbonates-v2|chemistry-evidence:ppm-mgkg-solvent+carbonate-equivalent-mass-labels-v1|SCI02-locality:PHREEQC-SUPCRTBL-anhydrite-classification+ledgered-carbonate-pulses-v1|aragonite-selector:hard-molarMgCa>=1.1-OR-explicit-open-spring+shallowP<=0.10kbar+40..100C-OR-Co5e-4..<1e-2molal+CoCa<0.6+20..30C-OR-highPstable-v5|aragonite-Sr:Wassenburg16-DSr1.38+/-0.53+accepted-zone-booked-return-v1|aragonite-Co:Barber75+GonzalezLopez18+equilibrium-and-effective-booked-DCo0.1+accepted-zone-booked-return-v2|CaCO3:Hacker05-negative-linear+/-1kbar|Prock:Pattison92-AndSil-16+/-3barC|stress:instant-resolved-shear-stable-grain-v2|event-fluid:locality-authored-material-transform+canonical-catalog-deep-match+owner-bound-MVT-90sulfide-30sulfate+receipted-exact-pore-fluid-export-replacement+atomic-heat-only-default-v4|elmwood-barite:explicit-sulfate-floor+receipted-Ba-hiatus-replacement+causal-next-pulse-masked-layers+terminal-clay-rind-v1|carbonate-boundary:PB82-dilute+DIC+reducedAlk+ideal-headspace+open-ledger+atomic-recharge+titration+accepted-zone-receipts+bulk-guard+equal-volume-mixed+solved-pCO2-uncertainty-v3|sphalerite-Ge:Belissont-Kd1708-cap22000-mass+dissolution-v2|gypsum-aw:ChirifeResnik84-NaCl-proxy-v1|silica-phase:Fournier-amorphous+chalcedony+quartz-Ostwald+reactive-pool+Manning94-grid-bounded-pressure+booked-transition+chemistry-competition-v5|surface-growth:all-cell-invalidated-exact-triangle-area+connected-patch+mass-booked-thickness+exact-shared-triangle-stratigraphy+executed-raycast+LOD-invariant-relief-v4|surface-anchor:position+void-normal+authenticated-triangle-barycentric+immutable-source-snapshot+constructor-fixed-production-provider+field-position-neighborhood-remap+separate-nearest-WallMesh-chemistry-projection+physical-host-anchor-inheritance+derived-live-remap-cache+exact-origin-edge-geodesic-occupancy+physical-normal-architecture-placement+source-qualified-fabrics+provider-timeline-replay+historical-helper-cursor+renderer-authority-lock+replay-shape-tessellation-fail-closed-v7|cavity-shape:seeded-exact-bubble-union+immutable-authored-radial-masks+pole-regular-sin2phi-cos2theta+analytic-pole-caps+digest-ledger-star-shaped-cartesian-production-v4|cavity-authority:default-before-water-chemistry-nucleation+fixed48-world-frame+zero-isovalue+Freudenthal-closed-manifold+signed-spacingOver4096-near-zero-scalar-floor+critical-contact-rejection+exact-volume-transaction+subresolution-chemistry-withheld+atomic-preflight+64-convergence+field-agreement+exact-contract-cache+semantic-startup-receipt+authenticated-replay-v4|water-boundary:mm-above-authenticated-current-floor+legacy-ring-to-authenticated-span-conversion+actual-vertex-chemistry-bands+topology-independent-wall-tint+field-clipped-interface+append-only-historical-appearance-ledger-v1|tiger-eye:HeaneyFisher03-antitaxial-crack-seal+GutzmerBeukesCairncross04-e44-surficial-alteration+BIF-physics-host+booked-NaFeSi-substrate+zeroSiO2-cumulative-O2closed-overprint+HF-only+local-tiger-iron+enum-fail-closed-v2|Mn-oxide-phase:birnessite-layer+Ba-romanechite-2x3+booked-birnessite-to-Mg-todorokite-3x3-at95-200C+pyrolusite-endmember-v2|CaSO4-phase:Hardie67-aw+P14.7Ckbar+single-evaluator+mass-balanced-replacement-v1|sulfur-ledger:sulfide+sulfate+elemental+declaration-driven-spatial+valence-specific-supersaturation+whole-scenario-authored-inputs+authenticated-midrun-activation+phase-resolved-testimony-v6|fluid-boundary:declaration-driven-exact-replacement+automatic-voxel-population+complete-raw-target+net-only-total-closure+claim-card-declaration+scenario-scale+exact-transaction-set+full-replacement-authority+schema-closed-containers-v7|native-S-oxidation:production-open+O2limited-closed+diagnostic-H-v1|sulphur-bank-HgS:zoned-association-not-S0-substrate-v1|wall-dissolution:atomic-preattack-local-pH+fractional-full-surface-shielding+geodesic-feeder+USGS1248-26C-molar-volume+reported-uncertainty-per1kg+exact-Cartesian-Freudenthal-volume-ledger+validated-depth-closure+capacity-derived-equivalent-diameter+atomic-prerun-creative-reauthoring-v4|solid-occupancy:all-nondissolved+positive-only-size-cap+growth-shadowing-not-chemical-seal+dissolution-remains-local-mass-balanced+zone-integrated-volume+chalcanthite-cell-local-salinity-pH-CuSO4-decay+truthful-trigger-mode+authenticated-current-enclosure-only-v4|cavity-seal:repeatable-transition+accepted-dissolution-immediate-below95pct-rearm+same-or-later-refill-testimony-v2|sicily-SDAOM:methane-1C1S+whole-scenario-carbon-ledger-v2|calcite-Mn:manganocalcite-excess<1.2-v1|HMC-solid-solution:Mucci87-seawater-DMgT+MucciMorse83-MgCa7.5..20-seawater25C+unknown-outside+BP89-metastable-miscibility+25C-activity-calibration+bounded-RT-extrapolation+omegaGT1-four-tier-locality-dispatch+heterogeneous-wall-approximation+zone-formula+dynamic-competition-stoichiometry+booked-return-v6|CuZn-carbonates:Alwan80+Kaluza24-observer-only-v1|growth-budget:calibrated-axial-mmolkg+zone-formula-ratio+booked-return-v7|dissolution:LIFO-booked-axial-inventory+5um-floor-v2|dissolution-overprint:flat-face-rate+coupled-return-dGgate+render-geometry+enforced-booked-return+replay-healing-v3|fluorite-etch:Godinho12-{100}-21C-pH3.6-I0.05-468h+Cama-dG<=-7+NaCl-closed-analogue+250x-schematic-pores+growth-shadow-access+authenticated-current-enclosure-withhold-v4|carbonate-boundary:conserved-only+explicit-initial-DIC-alk+fail-closed-open-reservoir+sabkha-recharge+zero-charge+truthful-reverse-flow-v3|engine-fluid:transactional-staged-crystal+actual-supplement+Au-ledger-v3|beryl:K36-postHF-recovery-v1|halite:vadose-propensity0.8-v1|borax-tincalconite:pure60.8C+halite-sat39.6C-oneway-v1|competition:accepted-axial-timescale+actual-zone-formula+residual-round-redistribution+single-evaluation-full-fill-negative-v5|thermal-field:LTE-voxel+geometry-weighted-finite-volume-k<=1/6+order-independent-sources+rock-boundary+per-voxel-one-way-authored-ambient+pause-retain+local-nucleation-growth-morphology+replay-v3|diagnosis:production-nucleator+local-max-context+causal-supersat+calibrated-budget-v5|scenario-contracts:headline-deterministic+accessory-deterministic-with-rationale+3seed-statistical+aspirational+fail-closed-four-tier-locality-license-all-production-nucleators+owner-bound-events+canonical-locality-event-deep-match+causal-event-prerequisite+valence-correct-commissioning-reconciliation-v11|bingham:RedmondEinaudi10-pulsed-hypogene+copper-history-before-gold+gold-aspirational-without-bornite+step85-exhumation+P0.001kbar+35to25C+no-reheat+supergene-malachite-v3|bisbee:Graeme-district+post-mining-inventories+alunite-statistical+jarosite-deterministic+siderite-aspirational+zero-CoNi+8-locality-exclusions+no-forced-halite-brine-v3|tsumeb:TSNB159-confirmed-gypsum-recharge+exact-authored-acid-stage-sulfate+Cu-only-enrichment+Ca-sulfate-recharge+generic-fluid-receipts+secondary-sulfides-aspirational-until-parent-replacement+TSNB301-questionable-rhodochrosite-excluded-v3|wittichen:authored-cooling-through-step170+ambient-thermal-pulses-disabled+step170-vadose-boundary+oxidized-sulfate-does-not-sulfidize-silver-v3|weathering-epilogue:strict-normalized-schema+inclusive-bounded-window+invalid-product-block+authored-drainage+3D-vadose+S-conserved+O2-receipt+CO2-light+same-site-precursor-history-v2|cation-sinks:accepted-shell-return-only+schneeberg-zero-Zn-all-step-finite-voxel-receipt+pharmacolite-dissolved-molar-cation-proxy+48-field-consumer-audit-v2|koettigite:Ciesielczuk20-pH<3+dissolved-molar-Zn-majority-proxy+Co-solid-solution+Hill79-Ni<=5molpct+Bowell14-Tsumeb-third-zone-only-v3|roughton-gill:Bridges11-quartz-carbonate-primary+carbonate-buffered-malachite-cerussite+silica-hemimorphite+step215-pyromorphite-encrusting-plumbogummite+signed-boundary-receipts-v3|run-testimony:actual-step+sample-index+nucleation+positive-layer-formula+returned-dissolution-inventory+habit-extent+hydration-transfer+competition-allocation+solid-solution+CDR+enclosure-liberation-lifecycle+controlled-production-engine-witness+solid-state-transformation+morphology-completeness+basis+null-confining-pressure-v7|morphology-sampling:post-step-terminal+finite-depletion-explicit+nonfinite-and-derived-and-no-interface-unavailable+complete-positive-layer-testimony+replay-bound-live-state-v2|locality-boundary:authored-pH-buffer+heat-only-ambient-pulse+creative-exact-authority-v1|crystal-size:individual-record-vs-aggregate-habit+celestine46cm+unresolved-wulfenite-v1|replacement:actual-parent-loss+matching-route-trigger+outline-inheritance-v1|enclosure:positive-nonphantom-solid-guest+same-step-net-positive-host-material+exact-substrate-contact-or-0.5mm-physical-lateral-front+substrate-first-deterministic-host+physical-solid-geometric-reach+shared-chemistry-current-topology-receipt-strict-chronological-lifecycle-authority+authenticated-same-crystal-host-phase-lineage-and-trigger-receipts+slowing-guest+physical-solid-threshold-partial-retreat-liberation+source-specific-front-film-reversal+replay-authenticated-lifecycle-v10|transformation-reactivity:product-only-acid-retreat+LIFO-booked-return+explicit-light-realgar+authenticated-controlled-product-witness-v2|agent-runtime:explicit-sulfur-valence+ambiguous-S-rejected+owner-bound-MVT-90sulfide-30sulfate+narrow-parity-v1|deccan:Savda-Nashik-silica+scolecite-mesolite+heulandite-stilbite+apophyllite-v2|transition-locality-exclusion:target-gated-v1|evidence-binding:exact-browser-dist-runtime-data+producer-contracts+timestamp-free-strips+mechanism-witness-artifact+aggregate-artifact-sha256-v3|creative-replenishment:run-owned-recipe+exact-canonical-wet-voxel-replacement+fail-closed-target-domains+signed-pH-Eh+explicit-legacy-sulfur-authority+whole-sulfur-constructor-baseline+spatial-fluid-pool-and-authority-receipts-v2|save-identity:version+model+scenario+origin-bound-replenishment+fluid-and-sulfur-boundary-receipts+voxel-fluids+dedicated-rng+nucleation-shared-seed+movement-state+growth-shadow-state+live-morphology+water-height+full-zone-ledgers+enclosure-lifecycle+transformation-histories-and-exposure-counters+cavity-evolution-chain+wall-depths+replay-cursor-fail-closed-v10
**Scenario spec hash:** e944986ea781d191b670fd1941bed8dac6a82b7eafb91202d66a0951afc159ba
**Archived strip SHA-256:** 0f302b398dbd87e295b182507fc89ef7119f6d34bc425b8d3da4097174292744

## Model boundary: calibrated growth budget
  - Kind: calibrated stoichiometric axial-growth budget proxy
  - Basis: 0.00008 mmol formula/kg solvent per accepted axial micrometre
  - Preserves: formula mole ratios and exact closure of booked inventory on dissolution
  - Limitation: not physical solid mass or volume; demand is independent of crystal size, habit, density, and rendered shell volume

## Expectation contract
**Deterministic headline (5):** halite, borax, tincalconite, mirabilite, thenardite
**Deterministic accessories (2):** calcite — Documented at Searles Lake and a subordinate carbonate in the closed-basin evaporite succession.; celestine — Documented at Searles Lake and a minor Sr-sulfate accessory in the saline cascade.
**Statistical (0):** (none)
**Aspirational (0):** (none)
**Locality exclusions (0):** (none)

**Cited sources:**
  - Smith 1979 USGS Professional Paper 1043 — Subsurface Stratigraphy and Geochemistry of Late Quaternary Evaporites, Searles Lake, California
  - Smith & Pratt 1957 USGS Bull. 1045-A — Hanksite from Searles Lake
  - Eugster 1980 Annu. Rev. Earth Planet. Sci. 8:35 — Lake Magadi-Searles brine geochemistry
  - Boron, CA + Death Valley — adjacent commercially-active borate localities in the same basin family

**Claim-level citations:**
  - (none authored)

## Paragenetic order as grown (7 species)
| # | mineral | first step | nucleations | transformations | pathway |
|--|--|--|--|--|--|
| 1 | calcite | 1 | 3 | 0 | nucleation |
| 2 | celestine | 5 | 9 | 0 | nucleation |
| 3 | mirabilite | 31 | 8 | 0 | nucleation |
| 4 | halite | 32 | 32 | 0 | nucleation |
| 5 | borax | 36 | 7 | 0 | nucleation |
| 6 | tincalconite | 60 | 2 | 8 | nucleation; borax -> tincalconite |
| 7 | thenardite | 66 | 8 | 0 | nucleation |

**Surprises (present but absent from all authored expectation tiers):** (none)
**Deterministic no-shows:** (none)
**Statistical no-shows (non-failing):** (none)
**Aspirational no-shows (non-failing):** (none)
**Excluded-locality appearances (failing):** (none)

## Environment trajectory (first → last, [min,max])
  - T: 18 → 8 °C  [8, 53.71144564435851] (raw_simulation_state)
  - pH: 9.5 → 9.5   [9.5, 9.5] (raw_simulation_state)
  - Eh: 301.64799306236995 → 322.1090020413224 mV  [301.64799306236995, 322.1090020413224] (raw_simulation_state)
  - salinity: 180 → 180 psu  [180, 180] (raw_simulation_state)
  - O2: 1.6 → 1.8 ppm (mg/kg solvent)  [1.6, 1.8] (raw_simulation_state)
  - concentration: 1 → 3 ×  [1, 3] (raw_simulation_state)

## Saturation drivers
  - SI_calcite: 0.504 → 0.378  [0.378, 1.008]
  - SI_aragonite: 0.378 → 0.252  [0.252, 0.882]
  - SI_dolomite: 1.575 → 1.197  [1.197, 2.52]
  - SI_HMC: 0.567 → 0.378  [0.378, 1.071]
  - SI_siderite: 1.323 → 1.134  [1.134, 1.953]
  - SI_selenite: -1.638 → -1.575  [-1.638, -1.575]
  - SI_anhydrite: -1.764 → -1.764  [-1.764, -1.512]
  - SI_barite: -8 → -8  [-8, -8]
  - SI_celestine: -0.504 → -0.504  [-0.504, -0.378]

## Authored pressure/stress/phase context (claim, not run testimony)
  - Fluid pressure: 0.05 kbar — cavity-fluid pressure; never silently substituted for rock pressure or differential stress
  - Rock pressure: unspecified kbar — unspecified; metamorphic phase field is reported unconstrained
  - Calcite/aragonite boundary: 3.042 kbar; secure aragonite=false
  - Al2SiO5: unconstrained (nominal n/a) — Rock/confining pressure is not specified; fluid pressure cannot substitute for it.
  - Gypsum/anhydrite pure-water boundary: 58.73 °C; initial a_w=0.862 ±0.010 (calibrated-proxy)
  - Ksp pressure rule: reaction-specific SUPCRTBL delta-logK grid; bilinear only inside density and per-reaction temperature masks; no constant reaction-volume proxy
    - calcite: active; active=true; ΔlogK=0.05396033533333333; SUPCRTBL reaction grid with bilinear interpolation; log10(Ksp) shifts by +0.054 relative to 1 bar at the same temperature.
    - aragonite: active; active=true; ΔlogK=0.051542663999999995; SUPCRTBL reaction grid with bilinear interpolation; log10(Ksp) shifts by +0.052 relative to 1 bar at the same temperature.
    - dolomite: active; active=true; ΔlogK=0.102503908; SUPCRTBL reaction grid with bilinear interpolation; log10(Ksp) shifts by +0.103 relative to 1 bar at the same temperature.
    - siderite: active; active=true; ΔlogK=0.05073122133333333; SUPCRTBL reaction grid with bilinear interpolation; log10(Ksp) shifts by +0.051 relative to 1 bar at the same temperature.
    - rhodochrosite: active; active=true; ΔlogK=0.04777057466666666; SUPCRTBL reaction grid with bilinear interpolation; log10(Ksp) shifts by +0.048 relative to 1 bar at the same temperature.
    - anhydrite: active; active=true; ΔlogK=0.046149338; SUPCRTBL reaction grid with bilinear interpolation; log10(Ksp) shifts by +0.046 relative to 1 bar at the same temperature.
    - barite: active; active=true; ΔlogK=0.047028815333333335; SUPCRTBL reaction grid with bilinear interpolation; log10(Ksp) shifts by +0.047 relative to 1 bar at the same temperature.
    - celestine: active; active=true; ΔlogK=0.045660031999999996; SUPCRTBL reaction grid with bilinear interpolation; log10(Ksp) shifts by +0.046 relative to 1 bar at the same temperature.
    - selenite: unsupported-reaction; active=false; ΔlogK=0; Gypsum is absent from the SUPCRTBL solid-species set; the Hardie water-activity/temperature phase selector remains active, but no Ksp pressure correction is fabricated.
  - Differential stress: no authored stress event.

## Executed pressure/stress/phase testimony (archived run)
**Source:** archived executed run state; not reconstructed from scenario definition
  - Fluid pressure: 0.05 → 0.05 kbar [0.05, 0.05], n=300
  - Rock/confining pressure: not recorded
  - Temperature: 18 → 8 °C [8, 53.71144564435851], n=300
  - Secure aragonite assessment: 0/300 executed steps; first={"boundary_kbar":3.04181614,"secure_aragonite":false}, last={"boundary_kbar":3.12150414,"secure_aragonite":false}
  - Al2SiO5 executed phase counts: {"unconstrained":300}; first=unconstrained, last=unconstrained
  - Executed stress: no stress event recorded by the run.
  - Transformation step 60: borax → tincalconite (temperature); dehydration={"schema":"dehydration-transformation-v1","step":60,"from":"borax","to":"tincalconite","driver":"temperature","temperature_C":55,"temperature_threshold_C":39.6,"water_state":"vadose","water_activity":0.862,"concentration":3,"formula_amount_mmol_kg":0.1783184814084586,"hydration_water_per_formula":5,"hydration_water_released_mmol_kg":0.891592407042293,"water_accounting":"structural-transfer-testimony; no conserved bulk H2O inventory"}; phase-replacement=null
  - Transformation step 60: borax → tincalconite (temperature); dehydration={"schema":"dehydration-transformation-v1","step":60,"from":"borax","to":"tincalconite","driver":"temperature","temperature_C":55,"temperature_threshold_C":39.6,"water_state":"vadose","water_activity":0.862,"concentration":3,"formula_amount_mmol_kg":0.2577188240393733,"hydration_water_per_formula":5,"hydration_water_released_mmol_kg":1.2885941201968665,"water_accounting":"structural-transfer-testimony; no conserved bulk H2O inventory"}; phase-replacement=null
  - Transformation step 66: borax → tincalconite (temperature); dehydration={"schema":"dehydration-transformation-v1","step":66,"from":"borax","to":"tincalconite","driver":"temperature","temperature_C":46.307728972332555,"temperature_threshold_C":39.6,"water_state":"vadose","water_activity":0.862,"concentration":3,"formula_amount_mmol_kg":0.23553618375858906,"hydration_water_per_formula":5,"hydration_water_released_mmol_kg":1.1776809187929453,"water_accounting":"structural-transfer-testimony; no conserved bulk H2O inventory"}; phase-replacement=null
  - Transformation step 68: borax → tincalconite (temperature); dehydration={"schema":"dehydration-transformation-v1","step":68,"from":"borax","to":"tincalconite","driver":"temperature","temperature_C":43.42267232029699,"temperature_threshold_C":39.6,"water_state":"vadose","water_activity":0.862,"concentration":3,"formula_amount_mmol_kg":0.18575614543858826,"hydration_water_per_formula":5,"hydration_water_released_mmol_kg":0.9287807271929414,"water_accounting":"structural-transfer-testimony; no conserved bulk H2O inventory"}; phase-replacement=null
  - Transformation step 120: borax → tincalconite (temperature); dehydration={"schema":"dehydration-transformation-v1","step":120,"from":"borax","to":"tincalconite","driver":"temperature","temperature_C":55.00000000000031,"temperature_threshold_C":39.6,"water_state":"vadose","water_activity":0.862,"concentration":3,"formula_amount_mmol_kg":0.2202443903268577,"hydration_water_per_formula":5,"hydration_water_released_mmol_kg":1.1012219516342885,"water_accounting":"structural-transfer-testimony; no conserved bulk H2O inventory"}; phase-replacement=null
  - Transformation step 120: borax → tincalconite (temperature); dehydration={"schema":"dehydration-transformation-v1","step":120,"from":"borax","to":"tincalconite","driver":"temperature","temperature_C":55.00000000000031,"temperature_threshold_C":39.6,"water_state":"vadose","water_activity":0.862,"concentration":3,"formula_amount_mmol_kg":0.22512980216940776,"hydration_water_per_formula":5,"hydration_water_released_mmol_kg":1.1256490108470387,"water_accounting":"structural-transfer-testimony; no conserved bulk H2O inventory"}; phase-replacement=null
  - Transformation step 122: borax → tincalconite (temperature); dehydration={"schema":"dehydration-transformation-v1","step":122,"from":"borax","to":"tincalconite","driver":"temperature","temperature_C":52.203509229701325,"temperature_threshold_C":39.6,"water_state":"vadose","water_activity":0.862,"concentration":3,"formula_amount_mmol_kg":0.6689157599701999,"hydration_water_per_formula":5,"hydration_water_released_mmol_kg":3.3445787998509995,"water_accounting":"structural-transfer-testimony; no conserved bulk H2O inventory"}; phase-replacement=null
  - Transformation step 180: borax → tincalconite (temperature); dehydration={"schema":"dehydration-transformation-v1","step":180,"from":"borax","to":"tincalconite","driver":"temperature","temperature_C":55.00000000000031,"temperature_threshold_C":39.6,"water_state":"vadose","water_activity":0.862,"concentration":3,"formula_amount_mmol_kg":0.027112768798865275,"hydration_water_per_formula":5,"hydration_water_released_mmol_kg":0.13556384399432636,"water_accounting":"structural-transfer-testimony; no conserved bulk H2O inventory"}; phase-replacement=null
  - Transformation reactivity commissioning: controlled production-engine boundary; not a locality trajectory; artifact vugg-mechanism-witnesses-v2/5577593478ad0f27fecb099927f62b455ec49d5ab0d37bc67af7800c7993ecb1.
    - No controlled reactivity witness is applicable to a transformation product in this locality run.
  - Conserved carbonate boundary: not enabled for this archived run.

## Declared non-sulfur fluid-boundary transactions (archived run)
**Source:** archived declared non-sulfur fluid-boundary transactions; exact net spatial closure is authenticated by the strip SHA-256; gross per-voxel replacement exchange is intentionally not claimed
  - No declared non-sulfur fluid-boundary transaction was executed.

## Crystal enclosure receipts (archived run)
**Source:** accepted host-over-guest and later liberation events from the archived executed run
  - Step 71: thenardite #21 enclosed calcite #1; route=geometric-overlap; host net layer=2285.3920157051025 µm; distance/reach=18.131422578429458/18.205116323392843 mm; size ratio=1860.150683192863; guest recent=0.7430615812862904 µm; guest core/loss/remaining=8.44051282150862/0/8.44051282150862 µm; partial loss=false.
  - Step 74: thenardite #22 enclosed calcite #24; route=geometric-overlap; host net layer=2753.218904580208 µm; distance/reach=7.7975853273696325/22.59077731692248 mm; size ratio=20086.286684957013; guest recent=0.6508865619524156 µm; guest core/loss/remaining=0.6508865619524156/0/0.6508865619524156 µm; partial loss=false.
  - Step 130: thenardite #38 enclosed celestine #2; route=geometric-overlap; host net layer=271.3289997837075 µm; distance/reach=18.671185385393805/21.921741468364175 mm; size ratio=83.37967271374947; guest recent=2.931859897019426 µm; guest core/loss/remaining=232.8775132406674/0/232.8775132406674 µm; partial loss=false.
  - Step 130: thenardite #38 enclosed celestine #3; route=geometric-overlap; host net layer=271.3289997837075 µm; distance/reach=10.052319611086771/21.921741468364175 mm; size ratio=92.9113918184264; guest recent=2.783038076040051 µm; guest core/loss/remaining=208.98676100284007/0/208.98676100284007 µm; partial loss=false.
  - Step 130: thenardite #21 enclosed celestine #4; route=geometric-overlap; host net layer=542.3365800103986 µm; distance/reach=29.991071897931157/48.77822568928351 mm; size ratio=226.9573180279506; guest recent=2.472124146314791 µm; guest core/loss/remaining=203.88738930911788/0/203.88738930911788 µm; partial loss=false.
  - Step 130: thenardite #38 enclosed celestine #5; route=geometric-overlap; host net layer=271.3289997837075 µm; distance/reach=13.234873646102727/21.921741468364175 mm; size ratio=105.87393169125099; guest recent=2.590868835813028 µm; guest core/loss/remaining=183.39973330756425/0/183.39973330756425 µm; partial loss=false.
  - Step 130: thenardite #38 enclosed celestine #10; route=geometric-overlap; host net layer=271.3289997837075 µm; distance/reach=14.001788656305802/21.921741468364175 mm; size ratio=110.70105417702506; guest recent=2.869324412428958 µm; guest core/loss/remaining=175.40258293609432/0/175.40258293609432 µm; partial loss=false.
  - Step 130: thenardite #21 enclosed celestine #13; route=geometric-overlap; host net layer=542.3365800103986 µm; distance/reach=7.641044669418808/48.77822568928351 mm; size ratio=265.4594760080661; guest recent=2.640277215206577 µm; guest core/loss/remaining=174.3156272029709/0/174.3156272029709 µm; partial loss=false.
  - Step 180: thenardite #21 enclosed celestine #47; route=geometric-overlap; host net layer=1020.2748172441477 µm; distance/reach=29.99107200018134/48.85831261229025 mm; size ratio=4645.4614301223355; guest recent=1.6651795651478607 µm; guest core/loss/remaining=9.978303055053905/0/9.978303055053905 µm; partial loss=false.
  - Step 240: thenardite #38 enclosed celestine #58; route=geometric-overlap; host net layer=539.1376070635421 µm; distance/reach=18.069124157871936/20.60760644685694 mm; size ratio=4367.644436364797; guest recent=1.6815806890612972 µm; guest core/loss/remaining=4.144823618004663/0/4.144823618004663 µm; partial loss=false.
  - Final inclusion status: 10 current; 10 accepted and 0 liberated.

## Sulfur reservoir identity and conservation (archived run)
**Source:** archived phase-resolved sulfur ledger; exact samples are authenticated by the strip SHA-256
  - Sulfur ledger: explicit valence-resolved sulfur pools were not enabled for this scenario.

## Layer, solid-solution, competition, and habit testimony
  - Accepted layers: 2093; formula-bearing=0; solid-solution=0; binding competition=0; reactive transformation etches=0; masked horizons=0.
  - Registered-mineral morphology: positive=543; classified=543; unavailable=0; terminal-depleted=0; regimes={"stepped_mild":248,"stepped_macro":32,"hopper_skeletal":263}; bases={"post-step":543}.
  - Habit crystal 1: calcite; stepped_scalenohedral; extent=individual; forms=["v{211} scalenohedron with macrostep terraces","stepped dog-tooth"]; size authority={"extent_kind":"individual","cap_cm":2000,"record_cm":1000}; CDR=null.
  - Habit crystal 2: celestine; tabular; extent=individual; forms=["{001} tabular plates","pale celestial blue"]; size authority={"extent_kind":"individual","cap_cm":92,"record_cm":46,"status":"Handbook documents elongated crystals to 45 cm; Royal Ontario Museum reference text reports Put-in-Bay geode crystals as wide as 46 cm. The cap is twice the 46 cm individual authority. Fibrous blankets/nodules are aggregate extents and capacity-bound.","sources":["Handbook of Mineralogy, Celestine (Anthony et al.), https://www.handbookofmineralogy.org/pdfs/celestine.pdf","Tait 2011, Gems and Minerals: Earth Treasures from the Royal Ontario Museum"]}; CDR=null.
  - Habit crystal 3: celestine; tabular; extent=individual; forms=["{001} tabular plates","pale celestial blue"]; size authority={"extent_kind":"individual","cap_cm":92,"record_cm":46,"status":"Handbook documents elongated crystals to 45 cm; Royal Ontario Museum reference text reports Put-in-Bay geode crystals as wide as 46 cm. The cap is twice the 46 cm individual authority. Fibrous blankets/nodules are aggregate extents and capacity-bound.","sources":["Handbook of Mineralogy, Celestine (Anthony et al.), https://www.handbookofmineralogy.org/pdfs/celestine.pdf","Tait 2011, Gems and Minerals: Earth Treasures from the Royal Ontario Museum"]}; CDR=null.
  - Habit crystal 4: celestine; tabular; extent=individual; forms=["{001} tabular plates","pale celestial blue"]; size authority={"extent_kind":"individual","cap_cm":92,"record_cm":46,"status":"Handbook documents elongated crystals to 45 cm; Royal Ontario Museum reference text reports Put-in-Bay geode crystals as wide as 46 cm. The cap is twice the 46 cm individual authority. Fibrous blankets/nodules are aggregate extents and capacity-bound.","sources":["Handbook of Mineralogy, Celestine (Anthony et al.), https://www.handbookofmineralogy.org/pdfs/celestine.pdf","Tait 2011, Gems and Minerals: Earth Treasures from the Royal Ontario Museum"]}; CDR=null.
  - Habit crystal 5: celestine; tabular; extent=individual; forms=["{001} tabular plates","pale celestial blue"]; size authority={"extent_kind":"individual","cap_cm":92,"record_cm":46,"status":"Handbook documents elongated crystals to 45 cm; Royal Ontario Museum reference text reports Put-in-Bay geode crystals as wide as 46 cm. The cap is twice the 46 cm individual authority. Fibrous blankets/nodules are aggregate extents and capacity-bound.","sources":["Handbook of Mineralogy, Celestine (Anthony et al.), https://www.handbookofmineralogy.org/pdfs/celestine.pdf","Tait 2011, Gems and Minerals: Earth Treasures from the Royal Ontario Museum"]}; CDR=null.
  - Habit crystal 6: mirabilite; prismatic; extent=individual; forms=["{010} pinacoid","{110} monoclinic prism","Glauber salt"]; size authority={"extent_kind":"individual","cap_cm":30,"record_cm":15}; CDR=null.
  - Habit crystal 7: halite; hopper_cube; extent=individual; forms=["{100} cube, faces hollowed to stepped funnels (hopper)","raft/skeletal edge frame"]; size authority={"extent_kind":"individual","cap_cm":50,"record_cm":25}; CDR=null.
  - Habit crystal 8: halite; hopper_cube; extent=individual; forms=["{100} cube, faces hollowed to stepped funnels (hopper)","raft/skeletal edge frame"]; size authority={"extent_kind":"individual","cap_cm":50,"record_cm":25}; CDR=null.
  - Habit crystal 9: mirabilite; fibrous_coating; extent=individual; forms=["{010} pinacoid","{110} monoclinic prism","Glauber salt"]; size authority={"extent_kind":"individual","cap_cm":30,"record_cm":15}; CDR=null.
  - Habit crystal 10: celestine; tabular; extent=individual; forms=["{001} tabular plates","pale celestial blue"]; size authority={"extent_kind":"individual","cap_cm":92,"record_cm":46,"status":"Handbook documents elongated crystals to 45 cm; Royal Ontario Museum reference text reports Put-in-Bay geode crystals as wide as 46 cm. The cap is twice the 46 cm individual authority. Fibrous blankets/nodules are aggregate extents and capacity-bound.","sources":["Handbook of Mineralogy, Celestine (Anthony et al.), https://www.handbookofmineralogy.org/pdfs/celestine.pdf","Tait 2011, Gems and Minerals: Earth Treasures from the Royal Ontario Museum"]}; CDR=null.
  - Habit crystal 11: tincalconite; cottonball; extent=individual; forms=["fibrous radial bundles","white rounded clusters"]; size authority={"extent_kind":"individual","cap_cm":30,"record_cm":15}; CDR=null.
  - Habit crystal 12: halite; hopper_cube; extent=individual; forms=["{100} cube, faces hollowed to stepped funnels (hopper)","raft/skeletal edge frame"]; size authority={"extent_kind":"individual","cap_cm":50,"record_cm":25}; CDR=null.
  - Habit crystal 13: celestine; tabular; extent=individual; forms=["{001} tabular plates","pale celestial blue"]; size authority={"extent_kind":"individual","cap_cm":92,"record_cm":46,"status":"Handbook documents elongated crystals to 45 cm; Royal Ontario Museum reference text reports Put-in-Bay geode crystals as wide as 46 cm. The cap is twice the 46 cm individual authority. Fibrous blankets/nodules are aggregate extents and capacity-bound.","sources":["Handbook of Mineralogy, Celestine (Anthony et al.), https://www.handbookofmineralogy.org/pdfs/celestine.pdf","Tait 2011, Gems and Minerals: Earth Treasures from the Royal Ontario Museum"]}; CDR=null.
  - Habit crystal 14: halite; hopper_cube; extent=individual; forms=["{100} cube, faces hollowed to stepped funnels (hopper)","raft/skeletal edge frame"]; size authority={"extent_kind":"individual","cap_cm":50,"record_cm":25}; CDR=null.
  - Habit crystal 15: halite; hopper_cube; extent=individual; forms=["{100} cube, faces hollowed to stepped funnels (hopper)","raft/skeletal edge frame"]; size authority={"extent_kind":"individual","cap_cm":50,"record_cm":25}; CDR=null.
  - Habit crystal 16: mirabilite; fibrous_coating; extent=individual; forms=["{010} pinacoid","{110} monoclinic prism","Glauber salt"]; size authority={"extent_kind":"individual","cap_cm":30,"record_cm":15}; CDR=null.
  - Habit crystal 17: tincalconite; cottonball; extent=individual; forms=["fibrous radial bundles","white rounded clusters"]; size authority={"extent_kind":"individual","cap_cm":30,"record_cm":15}; CDR=null.
  - Habit crystal 18: halite; hopper_cube; extent=individual; forms=["{100} cube, faces hollowed to stepped funnels (hopper)","raft/skeletal edge frame"]; size authority={"extent_kind":"individual","cap_cm":50,"record_cm":25}; CDR=null.
  - Habit crystal 19: halite; hopper_cube; extent=individual; forms=["{100} cube, faces hollowed to stepped funnels (hopper)","raft/skeletal edge frame"]; size authority={"extent_kind":"individual","cap_cm":50,"record_cm":25}; CDR=null.
  - Habit crystal 20: tincalconite; cottonball; extent=individual; forms=["fibrous radial bundles","white rounded clusters"]; size authority={"extent_kind":"individual","cap_cm":30,"record_cm":15}; CDR=null.
  - Habit crystal 21: thenardite; fibrous_coating; extent=individual; forms=["white efflorescent crust"]; size authority={"extent_kind":"individual","cap_cm":30,"record_cm":15}; CDR=null.
  - Habit crystal 22: thenardite; fibrous_coating; extent=individual; forms=["white efflorescent crust"]; size authority={"extent_kind":"individual","cap_cm":30,"record_cm":15}; CDR=null.
  - Habit crystal 23: tincalconite; cottonball; extent=individual; forms=["fibrous radial bundles","white rounded clusters"]; size authority={"extent_kind":"individual","cap_cm":30,"record_cm":15}; CDR=null.
  - Habit crystal 24: calcite; stepped_scalenohedral; extent=individual; forms=["v{211} scalenohedron, gentle growth steps","dog-tooth"]; size authority={"extent_kind":"individual","cap_cm":2000,"record_cm":1000}; CDR=null.
  - Habit crystal 25: calcite; stepped_scalenohedral; extent=individual; forms=["v{211} scalenohedron, gentle growth steps","dog-tooth"]; size authority={"extent_kind":"individual","cap_cm":2000,"record_cm":1000}; CDR=null.
  - Habit crystal 26: mirabilite; fibrous_coating; extent=individual; forms=["{010} pinacoid","{110} monoclinic prism","Glauber salt"]; size authority={"extent_kind":"individual","cap_cm":30,"record_cm":15}; CDR=null.
  - Habit crystal 27: halite; hopper_cube; extent=individual; forms=["{100} cube, faces hollowed to stepped funnels (hopper)","raft/skeletal edge frame"]; size authority={"extent_kind":"individual","cap_cm":50,"record_cm":25}; CDR=null.
  - Habit crystal 28: halite; hopper_cube; extent=individual; forms=["{100} cube, faces hollowed to stepped funnels (hopper)","raft/skeletal edge frame"]; size authority={"extent_kind":"individual","cap_cm":50,"record_cm":25}; CDR=null.
  - Habit crystal 29: halite; hopper_cube; extent=individual; forms=["{100} cube, faces hollowed to stepped funnels (hopper)","raft/skeletal edge frame"]; size authority={"extent_kind":"individual","cap_cm":50,"record_cm":25}; CDR=null.
  - Habit crystal 30: tincalconite; cottonball; extent=individual; forms=["fibrous radial bundles","white rounded clusters"]; size authority={"extent_kind":"individual","cap_cm":30,"record_cm":15}; CDR=null.
  - Habit crystal 31: tincalconite; cottonball; extent=individual; forms=["fibrous radial bundles","white rounded clusters"]; size authority={"extent_kind":"individual","cap_cm":30,"record_cm":15}; CDR=null.
  - Habit crystal 32: halite; hopper_cube; extent=individual; forms=["{100} cube, faces hollowed to stepped funnels (hopper)","raft/skeletal edge frame"]; size authority={"extent_kind":"individual","cap_cm":50,"record_cm":25}; CDR=null.
  - Habit crystal 33: halite; hopper_cube; extent=individual; forms=["{100} cube, faces hollowed to stepped funnels (hopper)","raft/skeletal edge frame"]; size authority={"extent_kind":"individual","cap_cm":50,"record_cm":25}; CDR=null.
  - Habit crystal 34: halite; hopper_cube; extent=individual; forms=["{100} cube, faces hollowed to stepped funnels (hopper)","raft/skeletal edge frame"]; size authority={"extent_kind":"individual","cap_cm":50,"record_cm":25}; CDR=null.
  - Habit crystal 35: tincalconite; cottonball; extent=individual; forms=["fibrous radial bundles","white rounded clusters"]; size authority={"extent_kind":"individual","cap_cm":30,"record_cm":15}; CDR=null.
  - Habit crystal 36: mirabilite; fibrous_coating; extent=individual; forms=["{010} pinacoid","{110} monoclinic prism","Glauber salt"]; size authority={"extent_kind":"individual","cap_cm":30,"record_cm":15}; CDR=null.
  - Habit crystal 37: halite; hopper_cube; extent=individual; forms=["{100} cube, faces hollowed to stepped funnels (hopper)","raft/skeletal edge frame"]; size authority={"extent_kind":"individual","cap_cm":50,"record_cm":25}; CDR=null.
  - Habit crystal 38: thenardite; fibrous_coating; extent=individual; forms=["white efflorescent crust"]; size authority={"extent_kind":"individual","cap_cm":30,"record_cm":15}; CDR=null.
  - Habit crystal 39: halite; hopper_cube; extent=individual; forms=["{100} cube, faces hollowed to stepped funnels (hopper)","raft/skeletal edge frame"]; size authority={"extent_kind":"individual","cap_cm":50,"record_cm":25}; CDR=null.
  - Habit crystal 40: halite; hopper_cube; extent=individual; forms=["{100} cube, faces hollowed to stepped funnels (hopper)","raft/skeletal edge frame"]; size authority={"extent_kind":"individual","cap_cm":50,"record_cm":25}; CDR=null.
  - Habit crystal 41: borax; cottonball; extent=individual; forms=["fibrous radial bundles","white rounded clusters"]; size authority={"extent_kind":"individual","cap_cm":30,"record_cm":15}; CDR=null.
  - Habit crystal 42: thenardite; fibrous_coating; extent=individual; forms=["white efflorescent crust"]; size authority={"extent_kind":"individual","cap_cm":30,"record_cm":15}; CDR=null.
  - Habit crystal 43: halite; hopper_cube; extent=individual; forms=["{100} cube, faces hollowed to stepped funnels (hopper)","raft/skeletal edge frame"]; size authority={"extent_kind":"individual","cap_cm":50,"record_cm":25}; CDR=null.
  - Habit crystal 44: halite; hopper_cube; extent=individual; forms=["{100} cube, faces hollowed to stepped funnels (hopper)","raft/skeletal edge frame"]; size authority={"extent_kind":"individual","cap_cm":50,"record_cm":25}; CDR=null.
  - Habit crystal 45: tincalconite; cottonball; extent=individual; forms=["fibrous radial bundles","white rounded clusters"]; size authority={"extent_kind":"individual","cap_cm":30,"record_cm":15}; CDR=null.
  - Habit crystal 46: mirabilite; fibrous_coating; extent=individual; forms=["{010} pinacoid","{110} monoclinic prism","Glauber salt"]; size authority={"extent_kind":"individual","cap_cm":30,"record_cm":15}; CDR=null.
  - Habit crystal 47: celestine; tabular; extent=individual; forms=["{001} tabular plates","pale celestial blue"]; size authority={"extent_kind":"individual","cap_cm":92,"record_cm":46,"status":"Handbook documents elongated crystals to 45 cm; Royal Ontario Museum reference text reports Put-in-Bay geode crystals as wide as 46 cm. The cap is twice the 46 cm individual authority. Fibrous blankets/nodules are aggregate extents and capacity-bound.","sources":["Handbook of Mineralogy, Celestine (Anthony et al.), https://www.handbookofmineralogy.org/pdfs/celestine.pdf","Tait 2011, Gems and Minerals: Earth Treasures from the Royal Ontario Museum"]}; CDR=null.
  - Habit crystal 48: halite; hopper_cube; extent=individual; forms=["{100} cube, faces hollowed to stepped funnels (hopper)","raft/skeletal edge frame"]; size authority={"extent_kind":"individual","cap_cm":50,"record_cm":25}; CDR=null.
  - Habit crystal 49: halite; hopper_cube; extent=individual; forms=["{100} cube, faces hollowed to stepped funnels (hopper)","raft/skeletal edge frame"]; size authority={"extent_kind":"individual","cap_cm":50,"record_cm":25}; CDR=null.
  - Habit crystal 50: mirabilite; fibrous_coating; extent=individual; forms=["{010} pinacoid","{110} monoclinic prism","Glauber salt"]; size authority={"extent_kind":"individual","cap_cm":30,"record_cm":15}; CDR=null.
  - Habit crystal 51: halite; hopper_cube; extent=individual; forms=["{100} cube, faces hollowed to stepped funnels (hopper)","raft/skeletal edge frame"]; size authority={"extent_kind":"individual","cap_cm":50,"record_cm":25}; CDR=null.
  - Habit crystal 52: thenardite; fibrous_coating; extent=individual; forms=["white efflorescent crust"]; size authority={"extent_kind":"individual","cap_cm":30,"record_cm":15}; CDR=null.
  - Habit crystal 53: mirabilite; fibrous_coating; extent=individual; forms=["{010} pinacoid","{110} monoclinic prism","Glauber salt"]; size authority={"extent_kind":"individual","cap_cm":30,"record_cm":15}; CDR=null.
  - Habit crystal 54: halite; hopper_cube; extent=individual; forms=["{100} cube, faces hollowed to stepped funnels (hopper)","raft/skeletal edge frame"]; size authority={"extent_kind":"individual","cap_cm":50,"record_cm":25}; CDR=null.
  - Habit crystal 55: halite; hopper_cube; extent=individual; forms=["{100} cube, faces hollowed to stepped funnels (hopper)","raft/skeletal edge frame"]; size authority={"extent_kind":"individual","cap_cm":50,"record_cm":25}; CDR=null.
  - Habit crystal 56: halite; hopper_cube; extent=individual; forms=["{100} cube, faces hollowed to stepped funnels (hopper)","raft/skeletal edge frame"]; size authority={"extent_kind":"individual","cap_cm":50,"record_cm":25}; CDR=null.
  - Habit crystal 57: halite; hopper_cube; extent=individual; forms=["{100} cube, faces hollowed to stepped funnels (hopper)","raft/skeletal edge frame"]; size authority={"extent_kind":"individual","cap_cm":50,"record_cm":25}; CDR=null.
  - Habit crystal 58: celestine; tabular; extent=individual; forms=["{001} tabular plates","pale celestial blue"]; size authority={"extent_kind":"individual","cap_cm":92,"record_cm":46,"status":"Handbook documents elongated crystals to 45 cm; Royal Ontario Museum reference text reports Put-in-Bay geode crystals as wide as 46 cm. The cap is twice the 46 cm individual authority. Fibrous blankets/nodules are aggregate extents and capacity-bound.","sources":["Handbook of Mineralogy, Celestine (Anthony et al.), https://www.handbookofmineralogy.org/pdfs/celestine.pdf","Tait 2011, Gems and Minerals: Earth Treasures from the Royal Ontario Museum"]}; CDR=null.
  - Habit crystal 59: halite; hopper_cube; extent=individual; forms=["{100} cube, faces hollowed to stepped funnels (hopper)","raft/skeletal edge frame"]; size authority={"extent_kind":"individual","cap_cm":50,"record_cm":25}; CDR=null.
  - Habit crystal 60: thenardite; fibrous_coating; extent=individual; forms=["white efflorescent crust"]; size authority={"extent_kind":"individual","cap_cm":30,"record_cm":15}; CDR=null.
  - Habit crystal 61: halite; hopper_cube; extent=individual; forms=["{100} cube, faces hollowed to stepped funnels (hopper)","raft/skeletal edge frame"]; size authority={"extent_kind":"individual","cap_cm":50,"record_cm":25}; CDR=null.
  - Habit crystal 62: thenardite; fibrous_coating; extent=individual; forms=["white efflorescent crust"]; size authority={"extent_kind":"individual","cap_cm":30,"record_cm":15}; CDR=null.
  - Habit crystal 63: thenardite; fibrous_coating; extent=individual; forms=["orthorhombic dipyramid","{111} dominant","{010} pinacoid"]; size authority={"extent_kind":"individual","cap_cm":30,"record_cm":15}; CDR=null.
  - Habit crystal 64: halite; fibrous_coating; extent=individual; forms=["{100} cube","hopper-growth pyramidal hollows"]; size authority={"extent_kind":"individual","cap_cm":50,"record_cm":25}; CDR=null.
  - Habit crystal 65: halite; fibrous_coating; extent=individual; forms=["{100} cube","hopper-growth pyramidal hollows"]; size authority={"extent_kind":"individual","cap_cm":50,"record_cm":25}; CDR=null.
  - Habit crystal 66: halite; fibrous_coating; extent=individual; forms=["{100} cube","hopper-growth pyramidal hollows"]; size authority={"extent_kind":"individual","cap_cm":50,"record_cm":25}; CDR=null.
  - Habit crystal 67: halite; fibrous_coating; extent=individual; forms=["{100} cube","hopper-growth pyramidal hollows"]; size authority={"extent_kind":"individual","cap_cm":50,"record_cm":25}; CDR=null.
  - Habit crystal 68: celestine; tabular; extent=individual; forms=["{001} tabular plates","pale celestial blue"]; size authority={"extent_kind":"individual","cap_cm":92,"record_cm":46,"status":"Handbook documents elongated crystals to 45 cm; Royal Ontario Museum reference text reports Put-in-Bay geode crystals as wide as 46 cm. The cap is twice the 46 cm individual authority. Fibrous blankets/nodules are aggregate extents and capacity-bound.","sources":["Handbook of Mineralogy, Celestine (Anthony et al.), https://www.handbookofmineralogy.org/pdfs/celestine.pdf","Tait 2011, Gems and Minerals: Earth Treasures from the Royal Ontario Museum"]}; CDR=null.
  - Habit crystal 69: halite; fibrous_coating; extent=individual; forms=["{100} cube","hopper-growth pyramidal hollows"]; size authority={"extent_kind":"individual","cap_cm":50,"record_cm":25}; CDR=null.

## Scenario notes (author's own rationale)
> Smith 1979 USGS Professional Paper 1043 — the canonical Searles Lake mineralogy + paragenesis reference. ~70 mineral species; the simulator covers the major Na-sulfate/borate/chloride suite (halite, borax, tincalconite, mirabilite, thenardite). Trona, hanksite, sulfohalite, glauberite, gaylussite, pirssonite, ulexite, colemanite, kernite are all real and worth adding later.

> Initial T = 18°C (Mojave October — playa temps span 5°C winter to 50°C summer). Initial chemistry seeds the alkaline-saline brine: Na 1500, B 100, S 400, Cl 1500, alkaline pH 9.5, low Ca (Ca > 50 would steal borate as colemanite). Salinity high (180 g/L) reflects the ~4× seawater concentration of mid-Pleistocene Searles brine.

> Five seasonal cycles over 300 steps. Each cycle: winter_freeze (steps 30, 90, 150, 210, 270) drops T to 8°C and bumps soluble species; summer_bake (steps 60, 120, 180, 240) heats to 55°C, firing mirabilite → thenardite (its incongruent-melting boundary is 32.4°C) and borax → tincalconite where the brine reaches the halite-saturated strength represented by the dry-down. The borax transition is 60.8°C in the pure Na2B4O7-H2O system but falls to 39.6°C in saturated NaCl-Na2B4O7 solution (Bowser 1964); controlled-RH measurements independently place the borax/tincalconite boundary near 59±6% RH at 25°C and 88±8% at 55–65°C (Ruhl et al. 2007). Inter-cycle fresh_pulse events flood the basin briefly.

> fluid_surface_ring isn't set in initial state — the basin starts fully saturated. The summer_bake events drop it through evaporation; fresh_pulse refills. The vadose-transition concentration boost (×3 per drying) is what brings borax + mirabilite into supersaturation.

> Death Valley (Furnace Creek) and Boron, CA also belong to this basin family but with slightly different brine-chemistry signatures. Searles is the most chemically diverse — chosen as the sim's anchor because more of its minerals are already plumbed.

> SIM 239 SCIENCE CORRECTION TO THE SIM 234 WITHDRAWAL: exact LIFO shell dissolution removed the old all-or-nothing crystal flag and showed that grown borax remnants survive some flushes, then dehydrate during later dry/hot windows. Primary literature supports that result: tincalconite occurs at Searles both as clear 1–3 mm crystals in contact with lake brine and as an alteration product of large borax crystals (Christ, Truesdell & Jones 1967, citing Pabst & Sawyer 1948 and Smith & Haines 1964). Bowser's saline-system measurements lower the transition from 60.8°C in pure Na-borate solution to 39.6°C in saturated NaCl-Na-borate solution. The old 'museum drawer only' interpretation was therefore too narrow. Tincalconite is restored to expects_species because the scenario now has a mechanism-backed saline summer transition plus its dry-exposure path; this is not a locality-scoreboard restoration.

> MINDAT VALID-SPECIES REFERENCE (boss-supplied screenshots + reference list, 2026-07-27 — 'Searles Lake, San Bernardino County, California, USA'; full citation transcription in research/scenarios/searles/citations-mindat-searles-lake-2026-07-27.md; 37 valid, 10 type-locality): Analcime, Anhydrite, Aphthitalite, Aragonite, Borax, BURKEITE (TL), Calcite, Celestine, Chlorargyrite (+ var. Bromian), Dolomite, GALEITE (TL), Gaylussite, Glauberite, GYPSUM (var. SELENITE), Halite, HANKSITE (TL), 'Heulandite Subgroup', 'K Feldspar' ('var. Adularia'), Merlinoite, Mirabilite, Nahcolite, Native Sulphur, Natron, Niter, NORTHUPITE (TL), Opal, Orthoclase, 'Phillipsite Subgroup', PIRSSONITE (TL), Quartz, Realgar, SCHAIRERITE (TL), SEARLESITE (TL), SULPHOHALITE (TL), Teepleite, Thenardite, TINCALCONITE (TL), Trona, TYCHITE (TL), Ulexite. WHAT THE LIST VOTES ON (vs seed-42 v236 sim output): (a) THE CLEANEST SHEET IN THE SWEEP — all 8 sim species licensed: borax ✓ (23.5 mm), calcite ✓, celestine ✓ (255 µm), halite ✓, mirabilite ✓, quartz ✓, selenite ✓ (34.2 mm — the S2-selenite migration's searles tenant is record-LICENSED, cross-mine selenite tally now 5-YES/2-NO), thenardite ✓ (40.2 mm); zero census flags. (b) SYLVITE IS NOT ON THE LIST — the rung-5 fleet-wide sylvite extinction (SIM 234, bittern-window physics) is retroactively record-licensed at the scenario that once grew it. (c) TINCALCONITE TL TENSION, resolved honestly: the list licenses the SPECIES at the locality (it IS the type locality) but the rung-5 withdrawal was mechanism-based — real tincalconite is dry-air alteration of grown borax (museum-drawer chemistry), not in-brine growth, so a locality license does not overturn a nucleation-mechanism withdrawal; both records are correct at their own layer. (d) documented-unfired = the famous saline double-salt suite (trona, hanksite, gaylussite, glauberite, pirssonite, northupite, nahcolite, burkeite, sulphohalite, schairerite, galeite, tychite, aphthitalite, teepleite, natron, niter, ulexite, searlesite) — no sim engines yet; the note-1 'worth adding later' list gains mindat corroboration; also anhydrite/aragonite/dolomite/opal + the authigenic silicate tail (analcime, merlinoite, phillipsite/heulandite, K-feldspar — Hay & Moiola 1962 sediment authigenesis, a different growth regime than the vug). (e) realgar + chlorargyrite + native sulphur are valid here but trace/exotic — no vote against the sim's hypogene-free evaporite scope.
